fix(ui): fix social media tooltip z-index (#4102)
* fix(ui): fix social media icons z-index

* added one space

* removed one space

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -44,6 +44,7 @@
 .bounce-out-on-hover:active {
   transform: scale(.8);
   transition-timing-function: cubic-bezier(.47, 2.02, .31, -.36);
+  z-index: 1;
 }
 
 .footer-links {
@@ -102,7 +103,6 @@
   padding: .5rem;
   text-align: center;
   width: fit-content;
-
 }
 
 .bounce-out-on-hover:hover::before,
